tests/sources/invalid/classes/instance_method_arg_count.fire
// Semantic error: instance method call with the wrong number of arguments.

class Counter {
    value: int32;

    fn Counter(value: int32) {
        this.value = value;
    }

    fn add(amount: int32) -> int32 {
        return this.value + amount;
    }
}

fn instance_method_arg_count() -> void {
    c: Counter = new Counter(0);
    c.add(1, 2);  //~ ERROR FS-SEM-0010 @7
}
